chore: healthz, swagger and shutdown
